k8s/vera-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vera-otus-mia-service
spec:
  selector:
    app: vera-otus-mia
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
