k8s/vera-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vera-namespace

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vera-otus-mia-deployment
  namespace: vera-namespace
  labels:
    app: vera-otus-mia
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vera-otus-mia
  template:
    metadata:
      labels:
        app: vera-otus-mia
    spec:
      containers:
        - name: vera-otus-mia
          image: hanomi/otus-mia:v1
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /health/liveness
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              port: 8080
              path: /health/readiness
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: vera-otus-mia-service
  namespace: vera-namespace
spec:
  selector:
    app: vera-otus-mia
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vera-ingress
  namespace: vera-namespace
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: "arch.homework"
      http:
        paths:
          - pathType: Prefix
            path: /otusapp/vera(/|$)(.*)
            backend:
              service:
                name: vera-otus-mia-service
                port:
                  number: 8080
